Remove run.command from repository and add to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -89,6 +89,12 @@ ehthumbs.db
 Thumbs.db
 
 # ============================================
+# PLATFORM-SPECIFIC RUN SCRIPTS
+# ============================================
+run.command
+run.bat
+
+# ============================================
 # NODE.JS / FRONTEND
 # ============================================
 node_modules/
