--- a/models/config/dataset-config.json
+++ b/models/config/dataset-config.json
@@ -3,7 +3,7 @@
     "datasets": [
         {
             "id": "custom_dataset",
-            "path": "../../app/backend/data",
+            "path": "../app/backend/data",
             "custom_metadata_module": "custom_metadata"
         }
     ],
